Fix text colour regression with links as buttons
Broken in 0213c68c.

--- a/app/assets/stylesheets/content/_buttons.sass
+++ b/app/assets/stylesheets/content/_buttons.sass
@@ -45,7 +45,8 @@ $button-success-background-hover-color:         darken($success-color, 18%) !def
 
 $button-border-radius:                          2px !default
 
-.button
+.button,
+a.button
   @extend %button
   @include button-size(medium)
   @include button-expand(false)
